# context-engineering-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINDINGS.md  FUTURE_WORK.md  LIMITATIONS.md  README.md  RESULTS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_proposal.md
.github/workflows/: ci.yml
docs/: architecture.md  attention-benchmarks.md  benchmarks.md  compression-benchmarks.md  definition-of-done.md  definitions.md  harness.md  interaction-benchmarks.md  metrics.md  naturalistic-benchmarks.md  non-goals.md  phase-1-summary.md  phase-10-summary.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md  phase-5-summary.md  phase-6-summary.md  phase-7-summary.md  phase-8-summary.md  phase-9-summary.md  project-summary.md  release-checklist.md  repository-layout.md  repository-tour.md  reproducibility.md  research-questions.md  retention-benchmarks.md  roadmap.md  robustness-benchmarks.md  selection-benchmarks.md  synthesis.md  taxonomy.md  temporal-benchmarks.md  thesis.md
docs/adr/: 0001-record-architecture-decisions.md  0002-experiment-protocol-as-core-abstraction.md  0003-deterministic-seeding.md  README.md
docs/examples/: README.md  easy-selection-experiment.json
src/context_engineering_lab/: __init__.py  catalog.py  cli.py  compositions.py  seeding.py
src/context_engineering_lab/attention/: __init__.py  _common.py  adaptive.py  oracle.py  proportional.py  salience.py  uniform.py  winner_take_most.py
src/context_engineering_lab/benchmarks/: __init__.py  attention.py  attention_presets.py  compression.py  compression_presets.py  facts.py  interaction.py  interaction_presets.py  retention.py  retention_presets.py  selection.py  selection_presets.py  smoke.py  temporal.py  temporal_presets.py
src/context_engineering_lab/compression/: __init__.py  _common.py  keyword_preserving.py  no_compression.py  oracle.py  sentence_boundary.py  truncation.py
src/context_engineering_lab/core/: __init__.py  attention.py  attention_metrics.py  benchmark.py  budget.py  composition.py  compression.py  compression_metrics.py  context.py  experiment.py  ids.py  interaction_metrics.py  item.py  json_types.py  metadata.py  metrics.py  naturalistic_metrics.py  registry.py  results.py  retention.py  retention_metrics.py  robustness_metrics.py  runner.py  strategy.py  task.py  temporal.py  temporal_metrics.py
src/context_engineering_lab/experiments/: __init__.py  phase10.py  phase2.py  phase3.py  phase4.py  phase5.py  phase6.py  phase7.py  phase8.py  phase9.py
src/context_engineering_lab/perturbations/: __init__.py  aggregation.py  base.py  comparison.py  corruption.py  injection.py  registry.py
src/context_engineering_lab/reporting/: __init__.py  persistence.py  phase10_report.py  phase2_report.py  phase3_report.py  phase4_report.py  phase5_report.py  phase6_report.py  phase7_report.py  phase8_report.py  phase9_report.py
src/context_engineering_lab/retention/: __init__.py  _common.py  frequency.py  hybrid.py  oracle.py  recency.py  (+2 more)
tests/: __init__.py  perturbation_helpers.py  synthesis_helpers.py  test_attention_abstractions.py  test_attention_allocators.py  test_attention_benchmark.py  test_attention_metrics.py  test_budget_fill.py  test_catalog_persistence.py  test_cli.py  test_composition.py  test_compositions.py  test_compression_benchmark.py  test_compression_metrics.py  test_compressors.py  test_ids.py  test_interaction_benchmark.py  test_interaction_metrics.py  test_item_metadata.py  test_keyword_overlap.py  test_metrics.py  test_naturalistic_benchmarks.py  test_naturalistic_metrics.py  test_naturalistic_records.py  test_no_external_api.py  test_oracle.py  test_package.py  test_perturbation_base.py  test_perturbation_corruption.py  test_perturbation_injection.py  test_phase10_experiments.py  test_phase10_report.py  test_phase2_experiments.py  test_phase2_report.py  test_phase3_experiments.py  test_phase3_report.py  test_phase4_experiments.py  test_phase4_report.py  test_phase5_experiments.py  test_phase5_report.py  (+34 more)
(+25 files in other folders)
