[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "context-engineering-lab"
version = "0.0.0"
description = "Experiments in salience, compression, temporal context, and attention."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Aditya", email = "aditya89bh@gmail.com" }]
keywords = [
    "context-engineering",
    "salience",
    "compression",
    "retrieval",
    "memory",
    "attention",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/aditya89bh/context-engineering-lab"
Repository = "https://github.com/aditya89bh/context-engineering-lab"
Documentation = "https://github.com/aditya89bh/context-engineering-lab/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/context_engineering_lab"]
